<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bt1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/btUno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/btDos"
        app:layout_constraintStart_toEndOf="@+id/bt1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/btnTres"
        app:layout_constraintStart_toEndOf="@+id/bt2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/btnCuatro"
        app:layout_constraintStart_toEndOf="@+id/bt3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/btnCinco"
        app:layout_constraintStart_toEndOf="@+id/bt4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/btnSeis"
        app:layout_constraintStart_toEndOf="@+id/bt5"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_jugar"
        android:layout_width="408dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnIniciar"
        app:layout_constraintEnd_toEndOf="@+id/bt6"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="@+id/bt1"
        app:layout_constraintTop_toBottomOf="@+id/bt1" />

    <Button
        android:id="@+id/bt_creditos"
        android:layout_width="408dp"
        android:layout_height="55dp"
        android:text="@string/btCreditos"
        app:layout_constraintEnd_toEndOf="@+id/bt6"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="@+id/bt1"
        app:layout_constraintTop_toBottomOf="@id/cl_fondo" />

    <FrameLayout
        android:id="@+id/cl_fondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="55dp"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/imagen_resultado"
            app:srcCompat="@drawable/vacio" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>